--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -1,4 +1,21 @@
 # zexi 0.4.0
+bedrock-runtime_Hello:
+  title: Hello &BR;
+  title_abbrev: Hello &BR;
+  synopsis: get started using &BR;.
+  category: Hello
+  languages:
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/bedrock-runtime
+          excerpts:
+            - description:
+              snippet_tags:
+                - gov2.bedrock-runtime.Hello
+  services:
+    bedrock-runtime: {InvokeModel}
+
 bedrock-runtime_InvokeModel:
   title: Invoke the specified &BR; model to run an inference
   title_abbrev: Invoke a model
@@ -25,6 +42,14 @@ bedrock-runtime_InvokeClaude:
   synopsis: invoke the Anthropic Claude model on &BR; to run an inference.
   category:
   languages:
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/bedrock-runtime
+          excerpts:
+            - description: Invoke the Anthropic Claude 2 foundation model.
+              snippet_tags:
+                - gov2.bedrock-runtime.InvokeClaude
     Java:
       versions:
         - sdk_version: 2
@@ -75,6 +100,14 @@ bedrock-runtime_InvokeJurassic2:
   synopsis: invoke the AI21 Labs Jurassic-2 model on &BR; to run an inference.
   category:
   languages:
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/bedrock-runtime
+          excerpts:
+            - description: Invoke the AI21 Labs Jurassic-2 foundation model.
+              snippet_tags:
+                - gov2.bedrock-runtime.InvokeJurassic2
     Java:
       versions:
         - sdk_version: 2
@@ -95,7 +128,6 @@ bedrock-runtime_InvokeJurassic2:
       versions:
         - sdk_version: 3
           github: python/example_code/bedrockruntime
-          sdkguide:
           excerpts:
             - description: Invoke the AI 21 Labs Jurassic-2 foundation model.
               snippet_tags:
@@ -126,12 +158,20 @@ bedrock-runtime_InvokeLlama2:
   synopsis: invoke the Meta Llama 2 Chat model on &BR; to run inference.
   category:
   languages:
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/bedrock-runtime
+          excerpts:
+            - description: Invoke the Meta Llama 2 Chat foundation model.
+              snippet_tags:
+                - gov2.bedrock-runtime.InvokeLlama2
     Java:
       versions:
         - sdk_version: 2
           github: javav2/example_code/bedrock-runtime
           excerpts:
-            - description: Invoke the Meta Llama 2 foundation model.
+            - description: Invoke the Meta Llama 2 Chat foundation model.
               snippet_tags:
                 - bedrock-runtime.java2.invoke_llama2.main
     PHP:
@@ -139,16 +179,15 @@ bedrock-runtime_InvokeLlama2:
         - sdk_version: 3
           github: php/example_code/bedrock-runtime
           excerpts:
-            - description: Invoke the Meta Llama 2 foundation model.
+            - description: Invoke the Meta Llama 2 Chat foundation model.
               snippet_tags:
                 - php.example_code.bedrock-runtime.service.invokeLlama2
     Python:
       versions:
         - sdk_version: 3
           github: python/example_code/bedrockruntime
-          sdkguide:
           excerpts:
-            - description: Invoke the Meta Llama 2 foundation model.
+            - description: Invoke the Meta Llama 2 Chat foundation model.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeMetaLlama2
   services:
@@ -213,18 +252,43 @@ bedrock-runtime_InvokeStableDiffusionAsync:
   services:
     bedrock-runtime: {InvokeModel}
 
+bedrock-runtime_InvokeTitanImage:
+  title: Invoke Amazon Titan on &BR; to generate images
+  title_abbrev: Image generation with Amazon Titan
+  synopsis: invoke the Amazon Titan on &BR; to generate images.
+  category:
+  languages:
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/bedrock-runtime
+          excerpts:
+            - description: Invoke the Amazon Titan image generation model.
+              snippet_tags:
+                - gov2.bedrock-runtime.InvokeTitanImage
+  services:
+    bedrock-runtime: {InvokeModel}
+
 bedrock-runtime_InvokeModelWithResponseStream:
   title: Invoke Anthropic Claude on &BR; to run an inference with a response stream
   title_abbrev: Invoke Anthropic Claude on &BR; and process the response stream
   synopsis: invoke Anthropic Claude on &BR; to run an inference with a response stream.
   category:
   languages:
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/bedrock-runtime
+          excerpts:
+            - description: Invoke Anthropic Claude and process the response stream.
+              snippet_tags:
+                - gov2.bedrock-runtime.InvokeModelWithResponseStream
     Java:
       versions:
         - sdk_version: 2
           github: javav2/example_code/bedrock-runtime
           excerpts:
-            - description: Invoke Anthropic Claude on &BR; and process the response stream.
+            - description: Invoke Anthropic Claude and process the response stream.
               snippet_tags:
                 - bedrock-runtime.java2.invoke_model_with_response_stream.main
     Python:
@@ -232,7 +296,7 @@ bedrock-runtime_InvokeModelWithResponseStream:
         - sdk_version: 3
           github: python/example_code/bedrock-runtime
           excerpts:
-            - description: Invoke Anthropic Claude on &BR; and process the response stream.
+            - description: Invoke Anthropic Claude and process the response stream.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeModelWithResponseStream
   services:
@@ -258,3 +322,26 @@ bedrock-runtime_Scenario_Invoke_models:
                 - php.example_code.bedrock-runtime.basics.scenario
   services:
     bedrock-runtime: {InvokeModel}
+
+bedrock-runtime_Scenario_InvokeModelsInclResponseStream:
+  title: Invoke multiple foundation models on &BR;
+  title_abbrev: Invoke multiple foundation models on &BR;
+  synopsis: invoke multiple foundation models on &BR;.
+  synopsis_list:
+    - Generate text with Anthropic Claude.
+    - Generate text with AI21 Labs Jurassic-2.
+    - Generate text with Meta Llama 2 Chat.
+    - Asynchronously process the response stream from Anthropic Claude.
+    - Generate an image with the Amazon Titan Image Generator.
+  category: Scenarios
+  languages:
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/bedrock-runtime
+          excerpts:
+            - description: Invoke multiple foundation models on &BR;.
+              snippet_tags:
+                - gov2.bedrock-runtime.Scenario_InvokeModels
+  services:
+    bedrock-runtime: {InvokeModel, InvokeModelWithResponseStream}
