--- a/.doc_gen/metadata/bedrock_metadata.yaml
+++ b/.doc_gen/metadata/bedrock_metadata.yaml
@@ -13,6 +13,15 @@ bedrock_Hello:
             - description:
               snippet_tags:
                 - gov2.bedrock.Hello
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/Bedrock
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - Bedrock.dotnetv3.BedrockActions.HelloBedrock
   services:
     bedrock: {ListFoundationModels}
 
@@ -63,5 +72,13 @@ bedrock_ListFoundationModels:
             - description: List the available &BRlong; foundation models.
               snippet_tags:
                 - python.example_code.bedrock.ListFoundationModels
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/Bedrock
+          excerpts:
+            - description: List the available Bedrock foundation models.
+              snippet_tags:
+                - Bedrock.dotnetv3.BedrockActions.ListFoundationModels
   services:
     bedrock: {ListFoundationModels}
