--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -229,9 +229,17 @@ bedrock-runtime_InvokeStableDiffusion:
         - sdk_version: 3
           github: python/example_code/bedrock-runtime
           excerpts:
-            - description: Invoke the Stability.ai Stable Diffusion foundation model.
+            - description: Invoke the Stability.ai Stable Diffusion XL foundation model.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeStableDiffusion
+    PHP:
+      versions:
+        - sdk_version: 3
+          github: php/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke the Stability.ai Stable Diffusion XL foundation model.
+              snippet_tags:
+                - php.example_code.bedrock-runtime.service.invokeStableDiffusion
   services:
     bedrock-runtime: {InvokeModel}
 
@@ -266,6 +274,14 @@ bedrock-runtime_InvokeTitanImage:
             - description: Invoke the Amazon Titan image generation model.
               snippet_tags:
                 - gov2.bedrock-runtime.InvokeTitanImage
+    PHP:
+      versions:
+        - sdk_version: 3
+          github: php/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke the Amazon Titan image generation model.
+              snippet_tags:
+                - php.example_code.bedrock-runtime.service.invokeTitanImage
     Python:
       versions:
         - sdk_version: 3
