--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,7 @@ xcuserdata
 
 # Ignore rust_dev_preview as it's no longer part of the project
 rust_dev_preview
+# .vectors are created by the Ailly RAG process
 .vectors
+# .snippets are created temporarily as build artifacts
 .snippets
