--- a/.doc_gen/metadata/cross_metadata.yaml
+++ b/.doc_gen/metadata/cross_metadata.yaml
@@ -52,6 +52,10 @@ cross_PAM:
       versions:
         - sdk_version: 3
           block_content: cross_PAM_JavaScript_block.xml
+    PHP:
+      versions:
+        - sdk_version: 3
+          block_content: cross_PAM_PHP_block.xml
     Rust:
       versions:
         - sdk_version: 1
