Add IoT Things Graph to services, remove version from CLI name. Add some services and fix route-53-domains. Fix casing typo in a few EC2 examples.

--- a/.doc_gen/metadata/ec2_metadata.yaml
+++ b/.doc_gen/metadata/ec2_metadata.yaml
@@ -1653,7 +1653,7 @@ ec2_CreateTags:
                 - cpp.example_code.ec2.CreateTags
   services:
     ec2: {CreateTags}
-ec2_createRouteTable:
+ec2_CreateRouteTable:
   title: Create a route table in Amazon Virtual Private Cloud (Amazon VPC) and associate it with a subnet
   title_abbrev: Create a route table
   synopsis: create route table and associate with &EC2; subnet.
@@ -1671,7 +1671,7 @@ ec2_createRouteTable:
   services:
     ec2:
       {CreateRouteTable}
-ec2_createSubnet:
+ec2_CreateSubnet:
   title: Create and tag a subnet in Amazon Virtual Private Cloud (Amazon VPC)
   title_abbrev: Create a subnet
   synopsis: create an &EC2; subnet.
@@ -1689,7 +1689,7 @@ ec2_createSubnet:
   services:
     ec2:
       {CreateSubnet}
-ec2_createVpc:
+ec2_CreateVpc:
   title: Create a Amazon Virtual Private Cloud (Amazon VPC)
   title_abbrev: Create a Amazon Virtual Private Cloud (Amazon VPC)
   synopsis: create a Amazon Virtual Private Cloud (Amazon VPC).
