--- a/.doc_gen/metadata/cross_metadata.yaml
+++ b/.doc_gen/metadata/cross_metadata.yaml
@@ -422,6 +422,7 @@ cross_ServerlessWorkflows:
     JavaScript:
       versions:
         - sdk_version: 3
+          github: javascriptv3/example_code/cross-services/lambda-step-functions
           block_content: cross_ServerlessWorkflows_JavaScript_block.xml
   service_main: sfn
   services:
