--- a/javascriptv3/package.json
+++ b/javascriptv3/package.json
@@ -53,7 +53,8 @@
     "example_code/sqs",
     "example_code/sts",
     "example_code/support",
-    "example_code/web/s3/list-objects"
+    "example_code/web/s3/list-objects",
+    "example_code/sfn"
   ],
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.2",
